force-app/main/default/objects/VILigne_affaire__c/VILigne_affaire__c.object-meta.xml
<CustomObject>
    <label>Ligne d&apos;affaire</label>
    <nameField>
        <displayFormat>L{000000000}</displayFormat>
        <label>Ref de Ligne d&apos;affaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes d&apos;affaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>