force-app/main/default/objects/VILigne_affaire__c/fields/Centre_Section__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centre / Section</label>
    <referenceTo>VICentre_Section__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire</relationshipLabel>
    <relationshipName>Lignes_d_affaire</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>