force-app/main/default/objects/VILigne_affaire__c/fields/Cout_terminaison_MontantI_E__c.field-meta.xml
<CustomField>
    <fullName>Cout_terminaison_MontantI_E__c</fullName>
    <formula>Devis_MontantI_E__c + Ecart_C_A_F_MontantI_E__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coût à terminaison - MontantI €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>