force-app/main/default/objects/VILigne_affaire__c/fields/Devis_MontantC__c.field-meta.xml
<CustomField>
    <fullName>Devis_MontantC__c</fullName>
    <label>Devis - MontantC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>