force-app/main/default/objects/VILigne_affaire__c/fields/Devis_MontantD__c.field-meta.xml
<CustomField>
    <fullName>Devis_MontantD__c</fullName>
    <label>Devis - MontantD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>