force-app/main/default/objects/VILigne_affaire__c/fields/Devis_MontantD_E__c.field-meta.xml
<CustomField>
    <fullName>Devis_MontantD_E__c</fullName>
    <label>Devis - MontantD €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>