force-app/main/default/objects/VILigne_affaire__c/fields/Dont_comptabiliseD_E__c.field-meta.xml
<CustomField>
    <fullName>Dont_comptabiliseD_E__c</fullName>
    <label>Dont comptabiliséD €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>