force-app/main/default/objects/VILigne_affaire__c/fields/Ecart_C_A_F_Heure__c.field-meta.xml
<CustomField>
    <fullName>Ecart_C_A_F_Heure__c</fullName>
    <label>Ecart C.A.F - Heure</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>