force-app/main/default/objects/VILigne_affaire__c/fields/Ecart_C_A_F_MontantD__c.field-meta.xml
<CustomField>
    <fullName>Ecart_C_A_F_MontantD__c</fullName>
    <label>Ecart C.A.F - MontantD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>