force-app/main/default/objects/VILigne_affaire__c/fields/Ecart_RAD_Heure__c.field-meta.xml
<CustomField>
    <fullName>Ecart_RAD_Heure__c</fullName>
    <formula>Cout_terminaison_Heure__c -  Ligne_d_affaire_precedente__r.Cout_terminaison_Heure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart RAD - Heure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>