force-app/main/default/objects/VILigne_affaire__c/fields/Ecart_RAD_MontantC_E__c.field-meta.xml
<CustomField>
    <fullName>Ecart_RAD_MontantC_E__c</fullName>
    <formula>Cout_terminaison_MontantC_E__c -  Ligne_d_affaire_precedente__r.Cout_terminaison_MontantC_E__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecart RAD - MontantC €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>