force-app/main/default/objects/VILigne_affaire__c/fields/EngagE_brut_arrete_MontantC_E__c.field-meta.xml
<CustomField>
    <fullName>EngagE_brut_arrete_MontantC_E__c</fullName>
    <label>Engagé brut à l&apos;arrêté - MontantC €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>