force-app/main/default/objects/VILigne_affaire__c/fields/Entite_BW__c.field-meta.xml
<CustomField>
    <fullName>Entite_BW__c</fullName>
    <formula>Text( Ligne_d_affaire_mensuelle__r.Affaire__r.Entite_BW__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entité BW</label>
    <type>Text</type>
</CustomField>