force-app/main/default/objects/VILigne_affaire__c/fields/Ligne_d_affaire_mensuelle__c.field-meta.xml
<CustomField>
    <fullName>Ligne_d_affaire_mensuelle__c</fullName>
    <label>Ligne d&apos;affaire mensuelle</label>
    <referenceTo>VILigne_d_affaire_mensuelle__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire</relationshipLabel>
    <relationshipName>Lignes_d_affaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>