force-app/main/default/objects/VILigne_affaire__c/fields/Ligne_d_affaire_precedente__c.field-meta.xml
<CustomField>
    <fullName>Ligne_d_affaire_precedente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne d&apos;affaire précédente</label>
    <referenceTo>VILigne_affaire__c</referenceTo>
    <relationshipLabel>Lignes d&apos;affaire</relationshipLabel>
    <relationshipName>Lignes_d_affaire</relationshipName>
    <type>Lookup</type>
</CustomField>