force-app/main/default/objects/VILigne_affaire__c/fields/Nom_de_l_affaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_l_affaire__c</fullName>
    <formula>Ligne_d_affaire_mensuelle__r.Affaire__r.Nom_affaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom de l&apos;affaire</label>
    <type>Text</type>
</CustomField>