force-app/main/default/objects/VILigne_affaire__c/fields/Type_de_ligne_d_affaire__c.field-meta.xml
<CustomField>
    <fullName>Type_de_ligne_d_affaire__c</fullName>
    <label>Type de ligne d&apos;affaire</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_de_ligne_d_affaire</valueSetName>
    </valueSet>
</CustomField>