force-app/main/default/objects/VILigne_affaire__c/recordTypes/Ligne_MO.recordType-meta.xml
<RecordType>
    <fullName>Ligne_MO</fullName>
    <active>true</active>
    <label>Ligne MO</label>
</RecordType>