force-app/main/default/objects/VILigne_affaire__c/validationRules/devise_de_la_ligne_d_affaire.validationRule-meta.xml
<ValidationRule>
    <fullName>devise_de_la_ligne_d_affaire</fullName>
    <active>false</active>
    <errorConditionFormula>text(CurrencyIsoCode) != text( Ligne_d_affaire_mensuelle__r.CurrencyIsoCode )</errorConditionFormula>
    <errorMessage>La devise de  ligne mensuelle de l&apos;affaire doit être identique à celle de la ligne d&apos;affaire</errorMessage>
</ValidationRule>