force-app/main/default/objects/VILigne_affaire__c/validationRules/pas_de_modif_si_periode_close.validationRule-meta.xml
<ValidationRule>
    <fullName>pas_de_modif_si_periode_close</fullName>
    <active>false</active>
    <errorConditionFormula>and(
$Setup.VIParametres__c.Sans_Calcul_de_PRI__c=false,

or(
left(text( Ligne_d_affaire_mensuelle__r.Periode_comptable__r.Statut__c ),2) = &apos;30&apos;, 
left(text( Ligne_d_affaire_mensuelle__r.Periode_comptable__r.Statut__c ),2) = &apos;90&apos;)
)</errorConditionFormula>
    <errorMessage>Il n&apos;est pas possible de modifier une ligne d&apos;affaire sur une période close</errorMessage>
</ValidationRule>